PR ld/5398 * elf32-arm.c (bfd_elf32_arm_process_before_allocation): Do not complain if   there is no glue bfd, just return.